changed the message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hello Sheridan 1a</string>
+    <string name="hello_sheridan">Hello Sheridan!</string>
 </resources>
