--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Hello Sheridan 1a</string>
     <string name="hello_sheridan">Hello Sheridan!</string>
+    <string name="click_me">Click Me</string>
 </resources>
